# VibeReview

./: .env.example  .gitignore  AGENTS.md  ARCHITECT_AND_QA_GUIDE.md  CODE_FLOW_GUIDE.md  KAGGLE_WRITEUP.md  README.md  VIDEO_SCRIPT.md  agents-cli-manifest.yaml  deploy_webhook_listener.sh  pr_security_report.md  publish_agent.sh  pyproject.toml  run_canvas_ui.py  run_live_ui.py  run_standalone.py
.agent/skills/: code-check.md
.gemini/: GEMINI.md
.github/workflows/: vibereview.yml
app/: __init__.py  agent.py  agent_card.json  agent_runtime_app.py  config.py  context.py  mcp_config.py  policies.yaml  sandbox_gating.py  security.py  telemetry.py  tools.py
app/app_utils/: auto_remediation.py  failure_clustering.py  microtransactions.py  remediation_feedback.py  telemetry.py  typing.py
app/sub_agents/: __init__.py
app/sub_agents/coding/: __init__.py  agent.py  tools.py
artifacts/: failure_clusters.md
artifacts/grade_results/: results_20260621_104904.html  results_20260621_104904.json  results_20260621_105001.html  results_20260621_105001.json
artifacts/traces/: traces_quarantine.json
docs/: VibeReview_Architect_Presentation.pptx
specs/: specs.md
tests/: __init__.py  a2ui_server.py  conftest.py
tests/eval/: __init__.py  eval_config.yaml  generate_mock_traces.py
tests/integration/: __init__.py  test_agent_runtime_app.py  test_canvas_ui.py
tests/unit/: __init__.py  test_auto_remediation.py  test_observability.py  test_phase2.py  test_phase3.py  test_quarantine.py  test_remediation_feedback.py  test_sandbox_gating.py  test_security.py
(+15 files in other folders)
