[project]
name = "vibe-review"
version = "0.1.0"
description = "VibeReview: Production-Ready Graph-Native Continuous Code Auditor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-genai==2.9.0",
    "google-cloud-spanner==3.68.0",
    "spiffe==0.3.0",
    "opentelemetry-api==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "pydantic==2.13.4",
    "pyjwt==2.13.0",
    "mcp==1.28.0",
    "gcsfs>=2024.11.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-logging>=3.11.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
    "a2ui-agent-sdk>=0.2.4",
]

[project.optional-dependencies]
eval = []

[dependency-groups]
dev = [
    "google-agents-cli==0.5.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
